--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.9.2",
     "@tailwindcss/vite": "^4.1.16",
     "axios": "^1.12.2",
     "json-server": "^1.0.0-beta.3",
@@ -17,6 +18,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-form-hook": "^0.0.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.16"
